--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -295,6 +295,7 @@ homeassistant/components/obihai/* @dshokouhi
 homeassistant/components/ohmconnect/* @robbiet480
 homeassistant/components/ombi/* @larssont
 homeassistant/components/onboarding/* @home-assistant/core
+homeassistant/components/ondilo_ico/* @JeromeHXP
 homeassistant/components/onewire/* @garbled1
 homeassistant/components/onvif/* @hunterjm
 homeassistant/components/openerz/* @misialq
