--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1001,6 +1001,9 @@ oauth2client==4.0.0
 # homeassistant.components.oem
 oemthermostat==1.1
 
+# homeassistant.components.ondilo_ico
+ondilo==0.1.0
+
 # homeassistant.components.onkyo
 onkyo-eiscp==1.2.7
 
