--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -472,6 +472,9 @@ numpy==1.19.1
 # homeassistant.components.google
 oauth2client==4.0.0
 
+# homeassistant.components.ondilo_ico
+ondilo==0.1.0
+
 # homeassistant.components.onvif
 onvif-zeep-async==0.5.0
 
